# PySEAL

./: .gitignore  Dockerfile  LICENSE.txt  README.md  SEAL.sln  VERSION.txt  build-docker.sh  run-docker-jupyter.sh  run-docker.sh
SEAL/: Makefile.in  SEAL.vcxproj  SEAL.vcxproj.filters  bigpoly.cpp  bigpoly.h  bigpolyarith.cpp  bigpolyarith.h  bigpolyarray.cpp  bigpolyarray.h  biguint.cpp  biguint.h  chooser.cpp  chooser.h  ciphertext.cpp  ciphertext.h  config.h.in  configure  configure.ac  decryptor.cpp  decryptor.h  encoder.cpp  encoder.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluationkeys.cpp  evaluationkeys.h  evaluator.cpp  evaluator.h  keygenerator.cpp  keygenerator.h  makefile  memorypoolhandle.h  plaintext.cpp  plaintext.h  polycrt.cpp  polycrt.h  randomgen.cpp  randomgen.h  (+5 more)
SEAL/legacy/: chooser.cpp  chooser.h  context.cpp  context.h  decryptor.cpp  decryptor.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluationkeys.cpp  evaluationkeys.h  evaluator.cpp  evaluator.h  keygenerator.cpp  keygenerator.h  polycrt.cpp  polycrt.h  simulator.cpp  simulator.h
SEAL/legacy/util/legacy/: computation.cpp  computation.h
SEAL/seal/: base64.cpp  bigpoly.cpp  bigpoly.h  bigpolyarray.cpp  bigpolyarray.h  biguint.cpp  biguint.h  chooser.cpp  chooser.h  ciphertext.cpp  ciphertext.h  context.cpp  context.h  decryptor.cpp  decryptor.h  defaultparams.h  encoder.cpp  encoder.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluationkeys.cpp  evaluationkeys.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  keygenerator.cpp  keygenerator.h  memorypoolhandle.h  plaintext.cpp  plaintext.h  polycrt.cpp  polycrt.h  publickey.h  randomgen.cpp  randomgen.h  seal.h  secretkey.h  (+6 more)
SEAL/seal/util/: baseconverter.cpp  baseconverter.h  clipnormal.cpp  clipnormal.h  common.h  computation.cpp  computation.h  defines.h  globals.cpp  globals.h  hash.cpp  hash.h  locks.h  mempool.cpp  mempool.h  modulus.cpp  modulus.h  ntt.cpp  ntt.h  numth.cpp  numth.h  nussbaumer.cpp  nussbaumer.h  polyarith.cpp  polyarith.h  polyarithmod.cpp  polyarithmod.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  polyfftmultmod.cpp  polyfftmultmod.h  polyfftmultsmallmod.cpp  polyfftmultsmallmod.h  polymodulus.cpp  polymodulus.h  randomtostd.h  smallntt.cpp  smallntt.h  uintarith.cpp  (+7 more)
SEAL/util/: clipnormal.cpp  clipnormal.h  common.cpp  common.h  computation.cpp  computation.h  crt.cpp  crt.h  defines.h  locks.cpp  locks.h  mempool.cpp  mempool.h  modulus.cpp  modulus.h  ntt.cpp  ntt.h  polyarith.cpp  polyarith.h  polyarithmod.cpp  polyarithmod.h  polycore.cpp  polycore.h  polyextras.cpp  polyextras.h  polyfftmult.cpp  polyfftmult.h  polyfftmultmod.cpp  polyfftmultmod.h  polymodulus.cpp  polymodulus.h  randomtostd.h  uintarith.cpp  uintarith.h  uintarithmod.cpp  uintarithmod.h  uintcore.cpp  uintcore.h  uintextras.cpp  uintextras.h
SEALExamples/: Makefile  SEALExamples.vcxproj  SEALExamples.vcxproj.filters  main.cpp  makefile
SEALNET/: AssemblyInfo.cpp  BigPolyArithWrapper.cpp  BigPolyArithWrapper.h  BigPolyArrayWrapper.cpp  BigPolyArrayWrapper.h  BigPolyWrapper.cpp  BigPolyWrapper.h  BigUIntWrapper.cpp  BigUIntWrapper.h  ChooserWrapper.cpp  ChooserWrapper.h  CiphertextWrapper.cpp  CiphertextWrapper.h  Common.cpp  Common.h  DecryptorWrapper.cpp  DecryptorWrapper.h  EncoderWrapper.cpp  EncoderWrapper.h  EncryptionParamsWrapper.cpp  EncryptionParamsWrapper.h  EncryptorWrapper.cpp  EncryptorWrapper.h  EvaluationKeysWrapper.cpp  EvaluationKeysWrapper.h  EvaluatorWrapper.cpp  EvaluatorWrapper.h  KeyGeneratorWrapper.cpp  KeyGeneratorWrapper.h  MemoryPoolHandleWrapper.cpp  MemoryPoolHandleWrapper.h  PlaintextWrapper.cpp  PlaintextWrapper.h  PolyCRTWrapper.cpp  PolyCRTWrapper.h  SEALNET.vcxproj  SEALNET.vcxproj.filters  SimulatorWrapper.cpp  SimulatorWrapper.h  UtilitiesWrapper.cpp  (+1 more)
SEALNET/sealnet/: AssemblyInfo.cpp  BigPolyArrayWrapper.cpp  BigPolyArrayWrapper.h  BigPolyWrapper.cpp  BigPolyWrapper.h  BigUIntWrapper.cpp  BigUIntWrapper.h  ChooserWrapper.cpp  ChooserWrapper.h  CiphertextWrapper.cpp  CiphertextWrapper.h  Common.cpp  Common.h  ContextWrapper.cpp  ContextWrapper.h  DecryptorWrapper.cpp  DecryptorWrapper.h  DefaultParamsWrapper.cpp  DefaultParamsWrapper.h  EncoderWrapper.cpp  EncoderWrapper.h  EncryptionParamsWrapper.cpp  EncryptionParamsWrapper.h  EncryptorWrapper.cpp  EncryptorWrapper.h  EvaluationKeysWrapper.cpp  EvaluationKeysWrapper.h  EvaluatorWrapper.cpp  EvaluatorWrapper.h  GaloisKeysWrapper.cpp  GaloisKeysWrapper.h  KeyGeneratorWrapper.cpp  KeyGeneratorWrapper.h  MemoryPoolHandleWrapper.cpp  (+15 more)
SEALNETExamples/: Program.cs  SEALNETExamples.csproj
SEALNETTest/: BigPolyArrayWrapper.cs  BigPolyWrapper.cs  BigUIntWrapper.cs  CiphertextWrapper.cs  ContextWrapper.cs  EncoderWrapper.cs  EncryptionParamsWrapper.cs  EncryptorWrapper.cs  EvaluationKeysWrapper.cs  EvaluatorWrapper.cs  GaloisKeysWrapper.cs  KeyGeneratorWrapper.cs  PlaintextWrapper.cs  PolyCRTWrapper.cs  PublicKeyWrapper.cs  SEALNETTest.csproj  SecretKeyWrapper.cs  SmallModulusWrapper.cs  UtilitiesWrapper.cs
SEALPython/: SEALWrapper.cpp  requirements.txt  setup.py  wrapper.cpp
SEALPythonExamples/: examples.py
SEALPythonNotebooks/: Example 1.ipynb  Example 2.ipynb  Example 3.ipynb  Example 4.ipynb  Example 5.ipynb  Example 6.ipynb  Example 7.ipynb  Example 8.ipynb
SEALTest/: SEALTest.vcxproj  SEALTest.vcxproj.filters  baseconverter.cpp  bigpoly.cpp  bigpolyarray.cpp  biguint.cpp  ciphertext.cpp  context.cpp  encoder.cpp  encryptionparams.cpp  encryptor.cpp  evaluationkeys.cpp  evaluator.cpp  galoiskeys.cpp  keygenerator.cpp  memorypoolhandle.cpp  plaintext.cpp  polycrt.cpp  publickey.cpp  randomgen.cpp  secretkey.cpp  smallmodulus.cpp  utilities.cpp
SlotEncoding/: SlotEncoding.vcxproj  SlotEncoding.vcxproj.filters  slotbigpoly.cpp  slotbigpoly.h  slotdecryptor.cpp  slotdecryptor.h  slotencoder.cpp  slotencoder.h  slotencryptor.cpp  slotencryptor.h  slotevaluator.cpp  slotevaluator.h
SlotEncodingNET/: SlotEncodingNET.vcxproj  test.cpp
(+26 files in other folders)
